pkg-config: support multiple variables in `pkgconfig_define` kwarg
The `pkgconfig_define` kwarg of [[dep.get_variable]] and `define_variable` kwarg of [[dep.get_pkgconfig_variable]] now accept multiple variables, consistent with pkg-config’s handling of `--define-variable` flag. The latter errored out but the former produced junk argument, breaking e.g. bubblewrap build.

--- a/docs/yaml/objects/dep.yaml
+++ b/docs/yaml/objects/dep.yaml
@@ -34,9 +34,11 @@ methods:
         type: list[str]
         since: 0.44.0
         description: |
-          You can also redefine a
-          variable by passing a list to this kwarg
+          You can also redefine variables
+          by passing a list to this kwarg
           that can affect the retrieved variable: `['prefix', '/'])`.
+          Since 0.64.0, multiple variables can be overridden:
+          `['prefix', '/', 'datadir', '/usr/share']`.
 
       default:
         type: str
