tests: skip buggy rust functionality on FreeBSD
We skip it on macOS already, and this is rust so who even knows what is
wrong here. The important thing is to get the overall test suite running
to begin with.

--- a/test cases/rust/13 external c dependencies/meson.build
+++ b/test cases/rust/13 external c dependencies/meson.build
@@ -2,6 +2,8 @@ project('rust linking to c using dependency', 'c', 'rust')
 
 if host_machine.system() == 'darwin'
   error('MESON_SKIP_TEST: does not work right on macos, please fix!')
+elif host_machine.system() == 'freebsd'
+  error('MESON_SKIP_TEST: does not work right on FreeBSD, please fix!')
 endif
 
 dep_zlib = dependency('zlib', static : get_option('static'), method : get_option('method'), required : false)
