modules/fs: add a build_mode to copyfile
There are cases where scripts need to be copied into the build directory
with specific file modes set. This allows this to be done in a platform
agnostic way, without having to figure out chmod vs something else.

See https://gitea.treehouse.systems/ariadne/pkgconf/pulls/246 for an
example of this.

--- a/test cases/common/14 configure file/meson.build
+++ b/test cases/common/14 configure file/meson.build
@@ -210,8 +210,8 @@ endif
 # Test the fs replacement
 # Test copying of an empty configuration data object
 inf = 'invalid-utf8.bin.in'
-outf = fs.copyfile(inf, 'invalid-utf8-1.bin')
-test('fs.copyfile string', check_file, args: [files(inf), outf])
+outf = fs.copyfile(inf, 'invalid-utf8-1.bin', build_mode : 'r--rw--wx')
+test('fs.copyfile string', check_file, args: [files(inf), outf, '--build-mode', '463'])
 
 # Test with default outname of string
 outf = fs.copyfile(inf)
