wip: test pch use in static libraries
Ugly, but triggers.

--- a/test cases/common/13 pch/c/meson.build
+++ b/test cases/common/13 pch/c/meson.build
@@ -10,5 +10,14 @@ if cc_id == 'pgi'
   subdir_done()
 endif
 
+libm = cc.find_library('m', required: false)
+
+stlib_squared = static_library('stlib_squared', 'static_squared.c', c_pch : 'pch/static_squared_pch.h', dependencies: libm)
+stlib = static_library('static', 'static.c', c_pch : 'pch/static_pch.h', dependencies: libm,
+  link_whole: stlib_squared)
+shlib = shared_library('shared', 'shared.c', c_pch : 'pch/shared_pch.h', dependencies: libm,
+  c_args: '-DBUILDING_DLL')
+
 exe = executable('prog', 'prog.c',
-c_pch : 'pch/prog.h')
+  link_with: [stlib, shlib],
+  c_pch : 'pch/prog.h')
