modules/wayland: Rename core_only to include_core_only
Rename the core_only option in scan_xml to include_core_only
to match the flag used by wayland-scanner.

--- a/test cases/wayland/2 core only/meson.build
+++ b/test cases/wayland/2 core only/meson.build
@@ -9,6 +9,6 @@ wl_mod = import('unstable-wayland')
 wl_client_dep = dependency('wayland-client')
 
 xdg_shell_xml = wl_mod.find_protocol('xdg-shell')
-xdg_shell = wl_mod.scan_xml(xdg_shell_xml, core_only : true)
+xdg_shell = wl_mod.scan_xml(xdg_shell_xml, include_core_only : true)
 exe = executable('core', 'core.c', xdg_shell, dependencies : wl_client_dep)
 test('core', exe)
