pylint: move from allow-list to deny-list
This makes it much easier to see what we're ignoring, as well as
allowing pylint to enforce any lints that currently pass but aren't in
the allow list automatically.

--- a/.pylintrc
+++ b/.pylintrc
@@ -5,28 +5,94 @@ jobs=0
 score=no
 
 [MESSAGES CONTROL]
-disable=all
-enable=
-    abstract-class-instantiated,
-    assert-on-tuple,
-    bad-indentation,
-    bare-except,
-    compare-to-zero,
-    consider-iterating-dictionary,
-    consider-using-enumerate,
-    dangerous-default-value,
-    deprecated-lambda,
-    function-redefined,
-    len-as-condition,
-    literal-comparison,
-    missing-kwoa,
-    mixed-indentation,
-    no-value-for-parameter,
-    redundant-keyword-arg,
-    reimported,
-    singleton-comparison,
-    superfluous-parens,
-    too-many-function-args,
-    unexpected-keyword-arg,
-    unneeded-not,
-    unreachable
+disable=
+    abstract-method,
+    arguments-differ,
+    arguments-renamed,
+    attribute-defined-outside-init,
+    broad-except,
+    cell-var-from-loop,
+    consider-merging-isinstance,
+    consider-using-dict-items,
+    consider-using-f-string,
+    consider-using-in,
+    consider-using-max-builtin,
+    consider-using-min-builtin,
+    consider-using-with,
+    cyclic-import,
+    deprecated-decorator,
+    duplicate-code,
+    duplicate-value,
+    exec-used,
+    fixme,
+    global-statement,
+    global-variable-not-assigned,
+    implicit-str-concat,
+    import-error,
+    import-outside-toplevel,
+    inconsistent-mro,
+    inconsistent-return-statements,
+    invalid-name,
+    invalid-unary-operand-type,
+    line-too-long,
+    method-cache-max-size-none,
+    missing-class-docstring,
+    missing-function-docstring,
+    missing-module-docstring,
+    multiple-imports,
+    multiple-statements,
+    no-else-break,
+    no-else-continue,
+    no-else-raise,
+    no-else-return,
+    no-member,
+    no-name-in-module,
+    no-self-argument,
+    non-parent-init-called,
+    not-an-iterable,
+    not-callable,
+    pointless-string-statement,
+    protected-access,
+    raise-missing-from,
+    redeclared-assigned-name,
+    redefined-argument-from-local,
+    redefined-builtin,
+    redefined-outer-name,
+    simplifiable-if-statement,
+    subprocess-run-check,
+    super-init-not-called,
+    too-few-public-methods,
+    too-many-ancestors,
+    too-many-arguments,
+    too-many-boolean-expressions,
+    too-many-branches,
+    too-many-instance-attributes,
+    too-many-lines,
+    too-many-locals,
+    too-many-nested-blocks,
+    too-many-public-methods,
+    too-many-return-statements,
+    too-many-statements,
+    typevar-name-incorrect-variance,
+    undefined-loop-variable,
+    unidiomatic-typecheck,
+    unnecessary-comprehension,
+    unnecessary-dict-index-lookup,
+    unnecessary-dunder-call,
+    unnecessary-lambda,
+    unnecessary-lambda-assignment,
+    unspecified-encoding,
+    unsubscriptable-object,
+    unused-argument,
+    unused-variable,
+    use-a-generator,
+    use-dict-literal,
+    use-implicit-booleaness-not-comparison,
+    use-list-literal,
+    use-maxsplit-arg,
+    use-sequence-for-iteration,
+    used-before-assignment,
+    useless-return,
+    useless-super-delegation,
+    wrong-import-order,
+    wrong-import-position,
