pylint: enable the consider-any-or-all plugin
Because we actually have a fair amount of code like this:
```python
for i in iterable:
    if predicate(i):
        return True
return False
```
which is the verbose way of writing:
```python
return any(predicate(i) for i in iterable)
```
So much so that we have help functions that don't need to exist because
the `any()` version is much terser and more obvious

--- a/.pylintrc
+++ b/.pylintrc
@@ -2,6 +2,7 @@
 jobs=0
 load-plugins=
     pylint.extensions.bad_builtin,
+    pylint.extensions.for_any_all,
     pylint.extensions.set_membership,
 
 [REPORTS]
