docs: compiler.find_library: discourage lib prefix

--- a/docs/yaml/objects/compiler.yaml
+++ b/docs/yaml/objects/compiler.yaml
@@ -355,7 +355,7 @@ methods:
   posargs:
     libname:
       type: str
-      description: The library to find.
+      description: The library to find, without “lib” prefix.
   kwargs:
     required:
       type: bool | feature
