--- a/.github/workflows/msys2.yml
+++ b/.github/workflows/msys2.yml
@@ -51,6 +51,9 @@ jobs:
             TOOLCHAIN: clang
     env:
       MESON_CI_JOBNAME: msys2-${{ matrix.NAME }}
+      # XXX: Otherwise unsetting MSYSTEM doesn't work
+      # https://github.com/msys2/msys2-runtime/pull/101#issuecomment-1255195675
+      MSYS: noemptyenvvalues
 
     defaults:
       run:
