ci: run `brew update` before `brew install`
This makes sure we don't end up picking up an older version of LLVM that
does not work.

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -67,6 +67,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    # Avoid picking up an older version of LLVM that does not work.
+    - run: brew update
     # use python3 from homebrew because it is a valid framework, unlike the actions one:
     # https://github.com/actions/setup-python/issues/58
     - run: brew install pkg-config ninja llvm qt@5 boost ldc hdf5 openmpi lapack scalapack sdl2 python3 boost-python3 gtk-doc
