gnome: allow custom targets as gdbus-codegen inputs
Custom targets as sources to `gnome.gdbus_codegen` worked until version 0.60
of Meson, but broke in 0.61 because of the conversion to typed_pos_args
and typed_kwargs.  Reinstate this by adding custom targets to the
decorators and annotations.

While generators also used to work, they are a bit tricky because
gdbus_codegen desugars to two custom_targets and therefore the generator
is invoked twice.  This should not be a problem, but be explicit and
leave that to a separate commit to highlight the problem.

Fixes: 53a187ba2 ("modules/gnome: use typed_pos_args for gdbus_codegen", 2021-11-01)
Fixes: ef52e6093 ("modules/gnome: use typed_kwargs for gdbus_codegen", 2021-11-08)

--- a/test cases/frameworks/7 gnome/gdbus/meson.build
+++ b/test cases/frameworks/7 gnome/gdbus/meson.build
@@ -58,6 +58,27 @@ else
   includes = include_directories('..')
 endif
 
+# check that custom targets work
+gdbus_xml_ct = custom_target('built xml sources for gdbus',
+  output: 'com.example.SampleCustomTarget.xml',
+  input: 'data/com.example.Sample.xml',
+  command : [copyfile, '@INPUT@', '@OUTPUT@'])
+
+gdbus_src_ct = gnome.gdbus_codegen(
+  'generated-gdbus-customtarget-src',
+  gdbus_xml_ct,
+  interface_prefix : 'com.example.',
+  namespace : 'Sample',
+  annotations : [],
+)
+gdbus_src_cti = gnome.gdbus_codegen(
+  'generated-gdbus-customtargetindex-src',
+  gdbus_xml_ct[0],
+  interface_prefix : 'com.example.',
+  namespace : 'Sample',
+  annotations : [],
+)
+
 gdbus_exe = executable('gdbus-test', 'gdbusprog.c',
   gdbus_src,
   include_directories : includes,
