--- a/test cases/nasm/2 asm language/meson.build
+++ b/test cases/nasm/2 asm language/meson.build
@@ -17,7 +17,11 @@ config_file = configure_file(
   output_format: 'nasm',
 )
 
+cc = meson.get_compiler('c')
+link_args = cc.get_supported_link_arguments(['-no-pie'])
+
 exe = executable('hello', 'hello.asm',
   nasm_args: '-DFOO',
+  link_args: link_args,
 )
 test('hello', exe)
