--- a/test cases/common/178 bothlibraries/meson.build
+++ b/test cases/common/178 bothlibraries/meson.build
@@ -49,14 +49,23 @@ test('runtest-shared-2', exe_shared2)
 test('runtest-static-2', exe_static2)
 test('runtest-both-2', exe_both2)
 
+fs = import('fs')
+ct_src = fs.copyfile('libfile.h.in', 'libfile.h')
+
 # Regression test: libccpp has both C and C++ sources. The executable only has
 # C sources. It should still link using the C++ compiler. When using
 # both_libraries the static has no sources and thus no compilers, resulting in
 # the executable linking using the C compiler.
 # https://github.com/Netflix/vmaf/issues/1107
-libccpp = both_libraries('ccpp', 'foo.cpp', 'libfile.c')
+libccpp = both_libraries('ccpp', 'foo.cpp', 'libfile.c', ct_src)
 exe = executable('prog-ccpp', 'main2.c',
   link_with: libccpp.get_static_lib(),
   c_args : ['-DSTATIC_COMPILATION'],
 )
 test('runtest-ccpp', exe)
+
+copy_py = find_program('copy.py')
+gen = generator(copy_py, arguments : ['@INPUT@', '@OUTPUT@'], output : '@BASENAME@')
+gen2 = generator(copy_py, arguments : ['@INPUT@', '@OUTPUT@'], output : '@PLAINNAME@')
+
+both_libraries('ccpp2', 'foo.cpp', gen2.process('libfile.c'), gen.process('libfile.h.in'))
