test cases: test warning for strings in include_directories feature
Which we have code for, but don't test for.

--- a/test cases/common/18 includedir/meson.build
+++ b/test cases/common/18 includedir/meson.build
@@ -1,4 +1,4 @@
-project('include dir test', 'c')
+project('include dir test', 'c', meson_version : '>= 0.48.0')
 
 inc = include_directories('include')
 subdir('src')
