add builtin option to install licenses
Unless `meson.install_dependency_manifest()` is explicitly used, this
will cause a default implied one to be installed.

--- a/docs/yaml/builtins/meson.yaml
+++ b/docs/yaml/builtins/meson.yaml
@@ -323,6 +323,10 @@ methods:
       If license files are defined as well, they will be copied next to the
       manifest and referenced in it.
 
+      If this function is not used, the builtin option `licensedir` can
+      be used to install the manifest to a given directory with the name
+      `depmf.json`.
+
     posargs:
       output_name:
         type: str
