--- a/test cases/nasm/2 asm language/meson.build
+++ b/test cases/nasm/2 asm language/meson.build
@@ -1,8 +1,19 @@
 project('test', 'c')
 
-if not host_machine.cpu_family().startswith('x86')
-  assert(not add_languages('nasm', required: false))
-  error('MESON_SKIP_TEST: nasm only supported for x86 and x86_64')
+if host_machine.cpu_family() == 'x86' and host_machine.system() == 'windows'
+  asm_format = 'win32'
+elif host_machine.cpu_family() == 'x86_64' and host_machine.system() == 'windows'
+  asm_format = 'win64'
+elif host_machine.cpu_family() == 'x86' and host_machine.system() == 'linux'
+  asm_format = 'elf32'
+elif host_machine.cpu_family() == 'x86_64' and host_machine.system() == 'linux'
+  asm_format = 'elf64'
+else
+  error('MESON_SKIP_TEST: skipping test on this platform')
+endif
+
+if meson.backend().startswith('vs')
+  error('MESON_SKIP_TEST: VS backend does not recognise NASM yet')
 endif
 
 if not add_languages('nasm', required: false)
@@ -38,7 +49,13 @@ config_file = configure_file(
 cc = meson.get_compiler('c')
 link_args = cc.get_supported_link_arguments(['-no-pie'])
 
-exe = executable('hello', 'hello.asm',
+if host_machine.system() == 'windows'
+  sources = files('hello_win.asm')
+else
+  sources = files('hello.asm')
+endif
+
+exe = executable('hello', sources,
   nasm_args: '-DFOO',
   link_args: link_args,
 )
