interpreter: deprecate passing 'jar' to build_target
This never made any sense, as jar() takes different arguments, and even
when it takes the same arguments, it has a different set of allowed
types. This makes validating arguments between the two incredibly
tedious and painful.

--- a/docs/yaml/functions/build_target.yaml
+++ b/docs/yaml/functions/build_target.yaml
@@ -12,7 +12,7 @@ description: |
   - `static_library` (see [[static_library]])
   - `both_libraries` (see [[both_libraries]])
   - `library` (see [[library]])
-  - `jar` (see [[jar]])
+  - `jar` (see [[jar]]) *(deprecated since 1.1.0)*
 
   This declaration:
 
