--- a/test cases/common/192 feature option/meson.build
+++ b/test cases/common/192 feature option/meson.build
@@ -15,6 +15,9 @@ assert(not required_opt.disabled(), 'Should be enabled option')
 assert(not required_opt.auto(), 'Should be enabled option')
 assert(required_opt.allowed(), 'Should be enabled option')
 assert(required_opt.require(true, error_message: 'xyz').enabled(), 'Should be enabled option')
+assert(required_opt.enable_if(true, error_message: 'xyz').enabled(), 'Should be enabled option')
+assert(required_opt.enable_if(false, error_message: 'xyz').enabled(), 'Should be enabled option')
+assert(required_opt.disable_if(false, error_message: 'xyz').enabled(), 'Should be enabled option')
 assert(required_opt.disable_auto_if(true).enabled(), 'Should be enabled option')
 assert(required_opt.disable_auto_if(false).enabled(), 'Should be enabled option')
 assert(required_opt.enable_auto_if(true).enabled(), 'Should be enabled option')
@@ -26,6 +29,10 @@ assert(optional_opt.auto(), 'Should be auto option')
 assert(optional_opt.allowed(), 'Should be auto option')
 assert(optional_opt.require(true).auto(), 'Should be auto option')
 assert(optional_opt.require(false, error_message: 'xyz').disabled(), 'Should be disabled auto option')
+assert(optional_opt.enable_if(true).enabled(), 'Should be enabled option')
+assert(optional_opt.enable_if(false).auto(), 'Should be auto option')
+assert(optional_opt.disable_if(true).disabled(), 'Should be disabled auto option')
+assert(optional_opt.disable_if(false).auto(), 'Should be auto option')
 assert(optional_opt.disable_auto_if(true).disabled(), 'Should be disabled auto option')
 assert(optional_opt.disable_auto_if(false).auto(), 'Should be auto option')
 assert(optional_opt.enable_auto_if(true).enabled(), 'Should be disabled auto option')
@@ -37,6 +44,9 @@ assert(not disabled_opt.auto(), 'Should be disabled option')
 assert(not disabled_opt.allowed(), 'Should be disabled option')
 assert(disabled_opt.require(true).disabled(), 'Should be disabled option')
 assert(disabled_opt.require(false, error_message: 'xyz').disabled(), 'Should be disabled option')
+assert(disabled_opt.enable_if(false).disabled(), 'Should be disabled option')
+assert(disabled_opt.disable_if(true).disabled(), 'Should be disabled option')
+assert(disabled_opt.disable_if(false).disabled(), 'Should be disabled option')
 assert(disabled_opt.disable_auto_if(true).disabled(), 'Should be disabled option')
 assert(disabled_opt.disable_auto_if(false).disabled(), 'Should be disabled option')
 assert(disabled_opt.enable_auto_if(true).disabled(), 'Should be disabled option')
