Allow `true` and `false` as values to feature options
Currently, if an option is a boolean, and you want to upgrade it to a
feature in a backwards compatible way, you need to first convert it to a
combo option with `true` and `false` deprecated, set on that for a
while, then change it to a feature. There really isn't a reason for that
though, we can just accept `true` and `false` as values to features, and
then convert them to `enabled` and `disabled`, respectively.

--- a/test cases/common/192 feature option/meson.build
+++ b/test cases/common/192 feature option/meson.build
@@ -4,6 +4,8 @@ feature_opts = get_option('auto_features')
 required_opt = get_option('required')
 optional_opt = get_option('optional')
 disabled_opt = get_option('disabled')
+false_opt = get_option('false')
+true_opt = get_option('true')
 
 assert(not feature_opts.enabled(), 'Should be auto option')
 assert(not feature_opts.disabled(), 'Should be auto option')
@@ -11,12 +13,22 @@ assert(feature_opts.auto(), 'Should be auto option')
 assert(feature_opts.allowed(), 'Should be auto option')
 
 assert(required_opt.enabled(), 'Should be enabled option')
+assert(required_opt.enabled(), 'Should be enabled option')
 assert(not required_opt.disabled(), 'Should be enabled option')
 assert(not required_opt.auto(), 'Should be enabled option')
 assert(required_opt.allowed(), 'Should be enabled option')
 assert(required_opt.require(true, error_message: 'xyz').enabled(), 'Should be enabled option')
 assert(required_opt.disable_auto_if(true).enabled(), 'Should be enabled option')
 assert(required_opt.disable_auto_if(false).enabled(), 'Should be enabled option')
+
+assert(true_opt.enabled(), 'Should be enabled option')
+assert(true_opt.enabled(), 'Should be enabled option')
+assert(not true_opt.disabled(), 'Should be enabled option')
+assert(not true_opt.auto(), 'Should be enabled option')
+assert(true_opt.allowed(), 'Should be enabled option')
+assert(true_opt.require(true, error_message: 'xyz').enabled(), 'Should be enabled option')
+assert(true_opt.disable_auto_if(true).enabled(), 'Should be enabled option')
+assert(true_opt.disable_auto_if(false).enabled(), 'Should be enabled option')
 
 assert(not optional_opt.enabled(), 'Should be auto option')
 assert(not optional_opt.disabled(), 'Should be auto option')
@@ -35,6 +47,15 @@ assert(disabled_opt.require(true).disabled(), 'Should be disabled option')
 assert(disabled_opt.require(false, error_message: 'xyz').disabled(), 'Should be disabled option')
 assert(disabled_opt.disable_auto_if(true).disabled(), 'Should be disabled option')
 assert(disabled_opt.disable_auto_if(false).disabled(), 'Should be disabled option')
+
+assert(not false_opt.enabled(), 'Should be disabled option')
+assert(false_opt.disabled(), 'Should be disabled option')
+assert(not false_opt.auto(), 'Should be disabled option')
+assert(not false_opt.allowed(), 'Should be disabled option')
+assert(false_opt.require(true).disabled(), 'Should be disabled option')
+assert(false_opt.require(false, error_message: 'xyz').disabled(), 'Should be disabled option')
+assert(false_opt.disable_auto_if(true).disabled(), 'Should be disabled option')
+assert(false_opt.disable_auto_if(false).disabled(), 'Should be disabled option')
 
 dep = dependency('threads', required : required_opt)
 assert(dep.found(), 'Should find required "threads" dep')
