--- a/test cases/common/192 feature option/meson_options.txt
+++ b/test cases/common/192 feature option/meson_options.txt
@@ -1,3 +1,5 @@
 option('required', type : 'feature', value : 'enabled', description : 'An required feature')
 option('optional', type : 'feature', value : 'auto', description : 'An optional feature')
 option('disabled', type : 'feature', value : 'disabled', description : 'A disabled feature')
+option('true', type : 'feature', value : 'true', description : 'An enabled by true feature')
+option('false', type : 'feature', value : 'false', description : 'An disabled by false feature')
