fs: Warn when passing empty strings
An empty argument resolves to the current dir as pathlib.Path is used
underneath. This is a very unexpected behavior for fs.exists() and
fs.is_dir().

Fixes: #8559

--- a/test cases/common/220 fs module/meson.build
+++ b/test cases/common/220 fs module/meson.build
@@ -6,6 +6,10 @@ fs = import('fs')
 
 f = files('meson.build')
 
+assert(fs.exists(''), 'Empty arg was not found.')
+assert(fs.is_dir(''), 'Empty arg not detected as a dir.')
+assert(not fs.is_file(''), 'Empty arg detected as a file.')
+
 assert(fs.exists('meson.build'), 'Existing file reported as missing.')
 assert(not fs.exists('nonexisting'), 'Nonexisting file was found.')
 
